fix: Refactor SmartBlockPlacer and StructureScanner rendering logic for improved clarity and performance